objects/Electric_Rate_List__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ElectricRateListrespose</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>CityName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectricRateDescription__c</fullName>
        <label>ElectricRateDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectricRateName__c</fullName>
        <label>ElectricRateName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateDescription__c</fullName>
        <description>full name of rateDescription</description>
        <label>RateDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Description__c</fullName>
        <label>Utility Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Electric Rate List</label>
    <nameField>
        <label>ElectricRateListResponseName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Electric Rate Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>